--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,12 @@
                 <module>hartshorn-introspect</module>
                 <module>hartshorn-introspect/hartshorn-introspect-reflection</module>
                 <module>hartshorn-core</module>
+                <module>hartshorn-reporting</module>
                 <!--                <module>hartshorn-commands</module>-->
                 <!--                <module>hartshorn-config</module>-->
-<!--                <module>hartshorn-hsl</module>-->
-<!--                <module>hartshorn-i18n</module>-->
-<!--                <module>hartshorn-proxy</module>-->
-<!--                <module>hartshorn-reporting</module>-->
+                <!--                <module>hartshorn-hsl</module>-->
+                <!--                <module>hartshorn-i18n</module>-->
+                <!--                <module>hartshorn-proxy</module>-->
             </modules>
         </profile>
     </profiles>
